[project]
name = "duns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "supabase>=2.16.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.16.1",
]
